--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
-    <script src="index.pack.js"></script>
+    <script src="index.js"></script>
   </head>
-  <body></body>
+  <body>
+    <p>Hello</p>
+  </body>
 </html>
